--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.7
+django-filter==21.1
 django-rest-auth==0.9.5
 djangorestframework==3.13.1
 drf-yasg==1.20.0
